<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_add_recipe"
        android:icon="@drawable/ic_add_recipe"
        android:title="@string/title_add_recipe"/>

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_chat"
        android:title="@string/title_chat"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile"/>

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_24"
        android:title="@string/settings"/>
</menu>