<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <!-- Home -->
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.reuvenbagrut.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_recipe_detail"
            app:destination="@id/navigation_recipe_detail" />
    </fragment>

    <!-- Favorites -->
    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.reuvenbagrut.LikedRecipesFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_favorites">
        <action
            android:id="@+id/action_favorites_to_recipe_detail"
            app:destination="@id/navigation_recipe_detail" />
    </fragment>

    <!-- Profile -->
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.reuvenbagrut.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <!-- Settings -->
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.reuvenbagrut.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <!-- Chat list (NEW) -->
    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.example.reuvenbagrut.fragments.ChatListFragment"
        android:label="@string/title_chat_list"
        tools:layout="@layout/fragment_chat_list" />


    <!-- Recipe detail as separate activity -->
    <activity
        android:id="@+id/navigation_recipe_detail"
        android:name="com.example.reuvenbagrut.RecipeDetailActivity"
        android:label="@string/recipe_details" />
</navigation>
